RH-2009-01-26-0: Enhancem.:  New cli option --get_pw_command added. With this option the
                             testsuite will use an external command to query passwords
                 Review:     JG

AH-2009-01-22-0: Enhancem.:  Added new test bugs/issuezilla/2864
                 Bugfix:     Removed disabling/enabling all.q workaround in 
                             bugs/issuezilla/2378
                 Review:     RD

RD-2009-01-21-0: Enhancem.:  Added two subordinate tests
                 Review:     CR

CR-2009-01-21-0: Bugfix:     o fixed test for issue 2564
                             o fixed test for issue 2028
                 Enhancem.:  New sge_procedures procedure:
                             wait_for_connected_scheduler()
                 Review:     RD

MG-2009-01-21-0: Enhancem:   Test for hedeby issue 569 + some small fix to test issue 568
                 Review:     AF

CR-2009-01-20-0: Cleanup:    get_binary_path() now is assuming
                             "/bin/sh" path for "sh" binary
                 Review:     DG

DG-2009-01-19-0: Enhancem.:  Added test for IZ 1806. 
                 Review:     CR 

MG-2009-01-19-1: Enhancem:   Test for hedeby issue 568
                 Review:     TB

MG-2009-01-19-0: Enhancem:   Test for hedeby issue 566
                 Review:     TB

HP-2009-01-14-0: Bugfix:     Added several error checks
                 Review:     MD

AP-2009-01-13-0: Enhancem.:  Added test for issue 2682
                 Bugfix:     o source_cvs_release configuration fix
                             o adjusting test template
                 Review:     JG

CR-2009-01-12-0: Bugfix:     o ge_has_feature():
                               - "job_submission_verify" renamed to
                                 to "job-submission-verify"
                               - new feature name "job-consumable"
                             o fixed resource_reservation test for
                               61_BRANCH